# rssfeed

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run-sidecar.sh
credence-docker/: Dockerfile  Manifest.toml  Project.toml
sidecar/: Dockerfile  pyproject.toml
sidecar/app/: config.py  db.py  extractor.py  llm.py  main.py  miniflux_client.py  templating.py  worker.py
sidecar/app/routes/: cookies.py  digest.py  entries.py  feeds.py  filters.py  proxy.py  share.py  stats.py
sidecar/app/templates/: _macros.html  base.html  categories.html  cookies.html  diff.html  digest.html  entries.html  entry.html  feed_discover_confirm.html  feed_discover_preview.html  feed_discover_results.html  feed_health.html  feed_health_badge.html  feed_settings.html  feeds.html  filters.html  shared.html  stats.html  summary_stream.html
sidecar/static/: app.js  input.css  manifest.json  style.css  sw.js
