[project]
name = "rssfeed-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "trafilatura>=2.0",
    "python-multipart>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
