[project]
name = "rssfeed-sidecar"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "trafilatura>=2.0",
    "readability-lxml>=0.8",
    "python-multipart>=0.0.18",
    "humanize>=4.0",
    "markdownify>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
